# practice

./: .gitignore  10.14.cpp  10.28.cpp  10.cc  11.10.cpp  11.cc  1399A.cpp  1399D.cpp  1399D1.cpp  1399E1.cpp  2016级1班第1学期期末成绩.txt  2020.5.1.1.cpp  2020.5.1.3.cpp  2020.5.14.1.cpp  2020.5.14.2.cpp  2020.5.14.3.cpp  2020.5.25.1.cpp  2020.5.25.2.cpp  2020.5.25.3.cpp  2020.5.27.3.cpp  2020.5.27.3a.cpp  2020.5.6.1.cpp  2020.9.16上机作业1.cpp  2020.9.16上机作业2.cpp  C++s_most_vexing_parse  C++s_most_vexing_parse.cc  CMakeLists.txt  Card.java  DataStructure2.cpp  DataStructure3.cpp  DataStructure5.cpp  Dec.cpp  Game.java  GeometricObject.java  HDU1069.cpp  HDU6838.cpp  HDU7109.cc  I_CANT_DEAL_IT.cpp  LightOJ1348.cc  MultiThreadtest1.cpp  (+84 more)
11.24/: header.h  main.cpp  source.cpp
2020_ICPC_Asia_Shenyang/: I.cc  K.cc  M.cc
Assignment1/: main.cpp
Card/: Card.java  Game.java
MyVector/: main.cpp  my_allocator.h  my_construct.h  my_uninitialized.h  my_vector.h
algorithm_course_design/: bfs.cpp  bfs.h  graph.cpp  graph.h  input.txt  main  main.cpp  min_priority_queue.h  output.txt  queue.h  quick_sort.h  test.cpp  union_find.h  vector.h
anything/: 11.02.cc  2020.5.1.2.cpp  2020.5.14.1.cpp  2020.5.14.3.cpp  2020.5.25.1.cpp  2020.5.25.2.cpp  2020.5.25.3.cpp  2020.5.27.3.cpp  2020.5.6.2.cpp  2020.5.6.3.cpp  2020.6.1.4.cpp  BigInteger.cpp  DataStructure1.cpp  DataStructure4.cpp  DataStructure5.cpp  DataStructure6.cpp  DataStructure7.cpp  OJ3.cpp  OJ5.cpp  OJ6.cpp  SocketPost.cpp  Tree1.cpp  Trees_on_the_level1.cpp  algo_course5_12_1.cpp  lexical_analysis.cpp  numerical_analysis_homework_1.py  recite.md  test.cc  top_down_parser.cpp  最长公共子序列.cpp  最长升序子序列.cpp
compli/: DataStructure1
csapp_lab_practice/: bits.c
d3d_practice/d3d_project_1/: CMakeLists.txt
d3d_practice/d3d_project_1/cmake/: file_basename.cmake
d3d_practice/d3d_project_1/src/: d3d_app.cpp  d3d_app.hpp  game_timer.cpp  game_timer.hpp  log.hpp  main.cpp  util.hpp
db_course_design/: CMakeLists.txt
db_course_design/.cache/clangd/index/: Appendfile.h.CF5DB2C2FDC4C03F.idx  AsyncLogging.cpp.FC6359DAC9E4ECCC.idx  AsyncLogging.h.5867AAEF05B8F780.idx  Logfile.cpp.F0D87E0AA0586443.idx  app_component.hh.80166F4E0AE5EB26.idx  controller.hh.33418D92DDEA6BFF.idx  main.cc.51B27FC06B8F37A9.idx  quz_dto.hh.C5C710FD8323622B.idx  quzl_dto.hh.17093AEB1AB56A37.idx  resource.cc.1822DDE26A962DA1.idx  resource.hh.4FDE0C5CEB178D6D.idx  ui_controller.hh.5F9B64565FE825D0.idx  user_controller.cc.E8E8C15494BFD7B0.idx  user_controller.hh.7BB32EBBA6F8C055.idx  user_db.cc.B7E25EE4F6BF848D.idx  user_service.hh.98AD7B0C381C63E0.idx  utils.hh.C30F59FFC6715560.idx
db_course_design/res/: create_quzl.html  create_quzl.js  index.html  login.css  login.html  login.js  quzl_ui.html  register.html  register.js  style.css  test.html  user_info.js  user_quz.html
db_course_design/sql/: init.sql
db_course_design/src/: app_component.hh  controller.cc  controller.hh  main.cc  user_controller.cc  user_controller.hh  utils.cc  utils.hh
db_course_design/src/db/: db_component.hh  quzl_db.cc  quzl_db.hh  user_db.hh
db_course_design/src/dto/: db_quzl_dto.hh  quzl_dto.hh  user_dto.hh
db_course_design/src/service/: quzl_service.cc  quzl_service.hh  user_service.cc  user_service.hh
db_course_design/src/ui/: resource.cc  resource.hh  ui_component.hh  ui_controller.cc  ui_controller.hh
deep_learning/: linear_regression.ipynb  linear_regression_simple.ipynb  logistic_regression.py  softmax_regression.ipynb  softmax_regression_practice.ipynb
gc_homework/gc_homework1/: CMakeLists.txt
gc_homework/gc_homework1/src/: glfw_utils.cpp  glfw_utils.hpp  haoframelinedata.inc  main.cpp  matrix.hpp  shader.cpp
gc_homework/gc_homework1/src/shader/: vertex.glsl
java_test/: Test.java  a.txt  b.txt
judge/: cfgrB.cc  (+33 more)
optix/Manet/simple_raytracer/: CMakeLists.txt  Camera.h  Geometry.cpp  Pch.h  RecordData.h  Sample.cpp  Sample.h  SimpleRaytracer.cpp  SimpleRaytracer.h
optix/Manet/simple_raytracer/cuda/: DeviceCamera.h  DeviceProgram.cu  Helper.h  LaunchParams.h  Radiance.cu  RecordData.h  Shadow.cu
optix/Manet/tputil/: Aabb.h  CMakeLists.txt  Camera.cpp  CudaBufferView.h  CudaDeviceBuffer.cpp  CudaDeviceBuffer.h  CudaOutputBuffer.h  Exception.cpp  Exception.h  GlDisplay.cpp  Model.cpp  Model.h  Preprocessor.h  Scene.cpp  Scene.h  TpUtil.cpp  TpUtil.h  VectorMath.h
optix/optix_practice/: .clang-format  CMakeLists.txt
optix/optix_practice/cmake/: configure_optix.cmake
optix/optix_practice/optix_practice/: CMakeLists.txt  DeviceProgram.cu  OptixPractice.cpp  Pch.h  Sample.cpp  Sample.h
optix/optix_practice/simple_raytracer/: CMakeLists.txt  Camera.cpp  Camera.h  DeviceProgram.cu  Geometry.h  LaunchParams.h  Pch.h  RecordData.h  Sample.cpp  Sample.h  SimpleRaytracer.cpp  SimpleRaytracer.h
optix/optix_practice/simple_raytracer/cuda/: DeviceProgram.cu  LaunchParams.h
optix/optix_practice/tputil/: CMakeLists.txt  CudaDeviceBuffer.cpp  CudaDeviceBuffer.h  CudaOutputBuffer.h  Exception.cpp  Exception.h  GlDisplay.cpp  GlUtil.cpp  GlUtil.h  Matrix.h  Preprocessor.h  VectorMath.h  transform.h
optix/samples/src/: Aabb.h  AreaLight.h  CMakeLists.txt  Camera.cpp  Camera.h  CudaBufferView.h  CudaDeviceBuffer.cpp  CudaDeviceBuffer.h  CudaOutputBuffer.h  GlDisplay.h  Helper.h  HitResult.h  Manet.cpp  Manet.h  ManetMacros.h  Matrix.h  PathTracing.cu  PathTracing.h  PbrMaterial.h  Record.h  Scene.cpp  Scene.h  Tracer.cpp  Tracer.h  Transform.h  Util.cpp  Util.h  VectorMath.h
term_project/cpp_term_project/: CMakeLists.txt  README.md  main.cpp
term_project/cpp_term_project/GUI/headers/: UIset.h  Widget.h
term_project/cpp_term_project/GUI/sources/: Widget.cpp
term_project/cpp_term_project/MAIN/headers/: dealmaintain.h  explain.h  log.h  machine.h  maintainmachine.h
term_project/cpp_term_project/MAIN/sources/: dealmaintain.cpp  explain.cpp  log.cpp  machine.cpp
term_project/cpp_term_project/list/: goods.json
term_project/os_term_project/subject2/: CMakeLists.txt  test.in
term_project/os_term_project/subject2/src/: mq_reciver.c  mq_sender.c  pipe_test.c  signal_test.c
(+524 files in other folders)
