OPTIX_add_sample_executable(pathtracer target_name
    cuda/GeometryData.h
    cuda/helpers.h
    cuda/Light.h
    cuda/LocalGeometry.h
    cuda/LocalShading.h
    cuda/PbrMaterial.h
    cuda/random.h
    cuda/util.h
    cuda/whitted_cuda.h
    cuda/whitted.cu
    cuda/whitted.h
    Aabb.h
    Camera.cpp
    Camera.h
    CudaBufferView.h
    CudaDeviceBuffer.cpp
    CudaDeviceBuffer.h
    CudaOutputBuffer.h
    Exception.cpp
    Exception.h
    GlDisplay.cpp
    GlDisplay.h
    Manet.cpp
    Manet.h
    ManetMacros.h
    Matrix.h
    Scene.cpp
    Scene.h
    Tracer.cpp
    Tracer.h
    Transform.h
    Util.cpp
    Util.h
    VectorMath.h
    OPTIONS -rdc true
)

target_link_libraries(${target_name}
    CUDA::cudart
)